Add JVM arguments for Travis CI build