@@ -61,7 +61,7 @@
 				<artifactId>maven-surefire-plugin</artifactId>
 				<version>2.22.2</version>
 				<configuration>
-					<argLine>-Xms1024m -Xmx1024m -XX:MaxPermSize=256m -Djdk.attach.allowAttachSelf=true -noverify --illegal-access=permit --add-opens java.base/jdk.internal.loader=ALL-UNNAMED</argLine>
+					<argLine>-Xms128m -Xmx128m -Djdk.attach.allowAttachSelf=true -noverify --illegal-access=permit --add-opens java.base/jdk.internal.loader=ALL-UNNAMED</argLine>
 				</configuration>
 			</plugin>
 		</plugins>
